fix/fixed the search logic to show no duplicate suggestions (#109)